--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
  <body>
 
 <div class="親1">
- 　　<div class="ヘア1"><img src="jpg ヘアカタログ 4.jpg" alt=""></div>
+  <div class="子1">
+    <div class="ヘア1"><img src="jpg ヘアカタログ 4.jpg" alt=""></div>
     <div class="ヘア3"><img src="jpg ヘアカタログ 3.JPG" alt=""></div>
  　 <div class="ヘア2"><img src="jpg ヘアカタログ 2.jpg" alt=""></div>
     <div class="ヘア4"><img src="jpg ヘアカタログ 1.JPG" alt=""></div>
+　</div>
 </div>
   
    
