--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
  　 <div class="ヘア2"><img src="jpg ヘアカタログ 2.jpg" alt=""></div>
     <div class="ヘア4"><img src="jpg ヘアカタログ 1.JPG" alt=""></div>
 　</div>
-</div>
-  
+  <div class="子2">
+  </div>
+</div>  
    
 </body>
 
