--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 
 <div class="親1">
   <div class="子1">
-    <div class="ヘア1"><img src="jpg ヘアカタログ 4.jpg" alt=""></div>
+      <div class="孫1">
+   <div class="ヘア1"><img src="jpg ヘアカタログ 4.jpg" alt=""></div>
     <div class="ヘア3"><img src="jpg ヘアカタログ 3.JPG" alt=""></div>
+　　　　</div>
+        <div class="孫2">
  　 <div class="ヘア2"><img src="jpg ヘアカタログ 2.jpg" alt=""></div>
     <div class="ヘア4"><img src="jpg ヘアカタログ 1.JPG" alt=""></div>
+        </div>
 　</div>
   <div class="子2">
   </div>
